# Book_Visualizer

./: .gitignore  AF_out.txt  ERRRRROR.txt  LP_out.txt  README.md  af_2.txt  agent.py  api_module.py  audio.ipynb  audio_module.py  base_reader.py  epy.py  epy_text.ipynb  generator.py  groq_image_gen.ipynb  image_gen.ipynb  logger_module.py  main.py  new_read.py  out.html  out.json  out.txt  out2.txt  prompts.py  pydantic_test.ipynb  pyproject.toml  reader.py  reader_new.py  reader_test.ipynb  requirement.txt  run.ipynb  run.py  run.sh  smlagnt.ipynb  sum.py  temp.py  test.ipynb  test1.ipynb  test_models.ipynb  text.txt  (+3 more)
Model_lists/: data.json  llm_data.json  llm_data_final.json  text-to-image.md  text-to-text.md
Serverless/: run.ipynb
api_module/: base.py  base_schemas.py  config.py  test_groq.py
api_module/handler/: base.py
api_module/schemas/: __init__.py  base.py  groq_schema.py  ollama_schema.py
audio_out/: 0  1  10  11  15  16  17  18  19  2  21  22  23  24  26  3  5  6  7  8
books/: HP.fb2  LP.azw3  LP.txt  Pixels.epub  a.txt  main.py  pymu.py  test.py
books/Alchemist/: Alchemist.epub
books/GoogleDoc/: PixelsandAlgorithms.xhtml  nav.xhtml  package.opf
books/hp/: Harry_Potter-orcerers_Stone_split_000.html  Harry_Potter-orcerers_Stone_split_001.html  content.opf  stylesheet.css  (+20 more)
module/: __init__.py  fixed.json  temp.txt  test.py  test_groq.py  utils.py
notebooks/: image_gen.ipynb
output/: HP_summary.txt  LP_summary.txt  LP_summary_test.txt  scenes.txt
reader/: main.py  output.txt  try.py
runpod/: out.json  run_pod_api.py
speak/: speech.py
(+451 files in other folders)
