[project]
name = "book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.11.11",
    "dotenv>=0.9.9",
    "ebooklib==0.18",
    "epub==0.5.2",
    "google-api-core==2.24.0",
    "google-auth==2.37.0",
    "google-cloud-texttospeech==2.23.0",
    "googleapis-common-protos==1.66.0",
    "hub==3.0.1",
    "huggingface-hub==0.29.1",
    "loguru==0.6.0",
    "lxml==5.3.0",
    "mobi>=0.3.3",
    "nltk==3.9.1",
    "pathlib>=1.0.1",
    "pillow==11.1.0",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "pymupdf==1.25.1",
    "requests==2.32.3",
    "tokenizers==0.21.0",
    "transformers>=4.50.3",
]
